--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "description": "nothing --but AUTHOUR, liscence AND description is required",
   "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arunOpt/electron-learn.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "keywords": [],
   "author": "Nobody",
   "license": "ISC",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "update-electron-app": "^2.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.64",
@@ -21,10 +27,25 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.64",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
+    "@electron-forge/publisher-github": "^6.0.0-beta.64",
     "electron": "^19.0.8"
   },
   "config": {
     "forge": {
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "arunOpt",
+              "name": "electron-learn"
+            },
+            "authToken": "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",
+            "prerelease": false,
+            "draft": true
+          }
+        }
+      ],
       "packagerConfig": {},
       "makers": [
         {
